tests/conformance/errors/hof_callback_stack/input.dgm
def mapper(x) {
  iff (x == 2) {
    throw "boom"
  }
  retrun x
}

map([1, 2, 3], mapper)
